[project]
name = "test_gemini"
version = "0.1.0"
description = "test-gemini using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "google-generativeai>=0.3.2",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "PyPDF2>=3.0.0,<4.0.0"
]

[project.scripts]
test_gemini = "test_gemini.main:run"
run_crew = "test_gemini.main:run"
train = "test_gemini.main:train"
replay = "test_gemini.main:replay"
test = "test_gemini.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
